Add gitignore procfile and update ports

--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Zeno Davids",
   "license": "ISC",
+  "engines": {
+    "node": "14.17.5"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
